force-app/main/default/objects/Gift_Aid_Declaration__c/Gift_Aid_Declaration__c.object-meta.xml
<CustomObject>
    <label>Gift Aid Declaration</label>
    <nameField>
        <displayFormat>GAD{00000000}</displayFormat>
        <label>Gift Aid Declaration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Aid Declarations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>