force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Active_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Active_Declaration__c</fullName>
    <formula>if(and( not(isblank(Related_Contact__r.MailingAddress)),not(ISBLANK( Related_Contact__r.MailingStreet)), not(ISBLANK( Related_Contact__r.MailingCity)),not(ISBLANK( Related_Contact__r.MailingCountry)),not(isblank(Related_Contact__r.MailingPostalCode)), not(isblank(Related_Contact__r.LastName)), not(isblank(Related_Contact__r.FirstName)), Declaration_Start_Date__c &lt;= today(),or( Declaration_End_Date__c &gt;today(), isblank(Declaration_End_Date__c ))), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Declaration</label>
    <type>Checkbox</type>
</CustomField>