force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Declaration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Declaration_End_Date__c</fullName>
    <label>Declaration End Date</label>
    <type>Date</type>
</CustomField>