force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Declaration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Declaration Start Date</label>
    <type>Date</type>
</CustomField>