force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Type__c</fullName>
    <label>Declaration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This donation only</fullName>
            </value>
            <value>
                <fullName>This donation and all future</fullName>
            </value>
            <value>
                <fullName>This donation, all future and past</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>