force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Submission_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Submission_First_Name__c</fullName>
    <formula>left( Related_Contact__r.FirstName ,35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission First Name</label>
    <type>Text</type>
</CustomField>