force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Submission_House_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Submission_House_Name_Number__c</fullName>
    <formula>left(Related_Contact__r.MailingStreet, 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission House Name/Number</label>
    <type>Text</type>
</CustomField>