force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Submission_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Submission_Last_Name__c</fullName>
    <formula>left(Related_Contact__r.LastName, 35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Last Name</label>
    <type>Text</type>
</CustomField>