force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Submission_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Submission_Postcode__c</fullName>
    <formula>if(find(&quot; &quot;, Related_Contact__r.MailingPostalCode )=0, UPPER(LEFT(Related_Contact__r.MailingPostalCode, LEN(Related_Contact__r.MailingPostalCode)-3))&amp; &quot; &quot;&amp; UPPER(RIGHT(Related_Contact__r.MailingPostalCode,3)), Related_Contact__r.MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Postcode</label>
    <type>Text</type>
</CustomField>