force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Submission_Title__c.field-meta.xml
<CustomField>
    <fullName>Submission_Title__c</fullName>
    <formula>left( text(Related_Contact__r.Salutation),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Title</label>
    <type>Text</type>
</CustomField>