force-app/main/default/objects/Gift_Aid_Declaration__c/validationRules/Rule_for_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Declaration_End_Date__c &lt; Declaration_Start_Date__c</errorConditionFormula>
    <errorMessage>End date should not be greater than start date</errorMessage>
</ValidationRule>