force-app/main/default/objects/Gift_Aid_Declaration__c/validationRules/Start_date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Declaration_Start_Date__c )), Declaration_Start_Date__c &gt;TODAY())</errorConditionFormula>
    <errorDisplayField>Declaration_Start_Date__c</errorDisplayField>
    <errorMessage>Start date should not be greater than today</errorMessage>
</ValidationRule>